fixed accordion svg size + tab contrast

--- a/less/uikit/accordion.less
+++ b/less/uikit/accordion.less
@@ -55,8 +55,8 @@
         position: absolute;
         top: 20px;
         right: @accordion-title-padding-vertical;
-        height: 14px;
-        width: 14px;
+        height: 21px;
+        width: 21px;
         background: url("@{global-image-path}/plus.svg") 0 0 no-repeat;
         opacity: 0.3;
     }
