--- a/less/uikit/contrast.less
+++ b/less/uikit/contrast.less
@@ -6,16 +6,14 @@
 @contrast-color:                                 @global-contrast-color;
 @contrast-inverted-color:                        #fff;
 
-@contrast-base-hr-border:                        fade(@contrast-color, 5%);
-
 @contrast-nav-side-hover-background:             transparent;
 @contrast-nav-side-active-background:            transparent;
-@contrast-nav-side-divider-border:               fade(@contrast-color, 5%);
 
 @contrast-subnav-pill-hover-background:          fade(@contrast-color, 10%);
 @contrast-subnav-pill-active-color:              @global-dark-color;
 
-@contrast-list-line-border:                      fade(@contrast-color, 5%);
+@contrast-tab-hover-background:                  transparent;
+@contrast-tab-active-background:                 transparent;
 
 @contrast-form-border:                           fade(@contrast-color, 50%);
 @contrast-form-background:                       transparent;
@@ -39,13 +37,17 @@
 @contrast-icon-button-background:                transparent;
 @contrast-icon-button-hover-background:          @contrast-inverted-color;
 @contrast-icon-button-hover-color:               @global-dark-color;
-@contrast-icon-button-active-background:         #bdbdbd;
+@contrast-icon-button-active-background:         @contrast-icon-button-hover-background;
+@contrast-icon-button-active-color:              @global-dark-color;
 
 @contrast-text-primary-color:                    #f0615c;
 
 //
 // New
 //
+
+@contrast-tab-hover-border:                      @contrast-tab-hover-color;
+@contrast-tab-active-border:                     @contrast-tab-active-color;
 
 @contrast-button-border:                         @contrast-color;
 @contrast-button-hover-border:                   fade(@contrast-color, 70%);
@@ -54,16 +56,13 @@
 // Base
 // ========================================================================
 
-.hook-contrast-base-code() {
-    border-color: fade(@contrast-color, 20%);
-    background: fade(@contrast-color, 10%);
-}
+.hook-contrast-base-code() { border-color: fade(@contrast-color, 20%); }
 
 
 // Nav
 // ========================================================================
 
-.hook-contrast-nav-side() { border-top-color: fade(@contrast-color, 5%); }
+.hook-contrast-nav-side() { border-top-color: fade(@contrast-color, 20%); }
 
 .hook-contrast-nav-side-hover() {}
 .hook-contrast-nav-side-active() {}
@@ -86,8 +85,17 @@
 // ========================================================================
 
 .hook-contrast-tab() {}
-.hook-contrast-tab-hover() {}
-.hook-contrast-tab-active() {}
+
+.hook-contrast-tab-hover() {
+
+    &::after { background-color: @contrast-tab-hover-border; }
+}
+
+.hook-contrast-tab-active() {
+
+    &::after { background-color: @contrast-tab-active-border; }
+
+}
 
 
 // List
@@ -129,7 +137,7 @@
 
 .hook-contrast-icon-hover() {}
 .hook-contrast-icon-hover-hover() {}
-.hook-contrast-icon-button() {}
+.hook-contrast-icon-button() { border-color: @contrast-icon-button-color; }
 
 .hook-contrast-icon-button-hover() { border-color: @contrast-icon-button-hover-background; }
 
